# python

./: README.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-25-readme-update-design.md  2026-02-25-readme-update.md
src/jsondb_cloud/: __init__.py  _http.py  client.py  collection.py  errors.py  models.py  types.py
tests/: test_client.py  test_errors.py
