[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsondb-cloud"
version = "1.0.0"
description = "The official Python SDK for jsondb.cloud — a hosted JSON document database."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "jsondb.cloud", email = "support@jsondb.cloud" },
]
keywords = ["jsondb", "json", "database", "api", "sdk", "document-database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://jsondb.cloud"
Documentation = "https://jsondb.cloud/docs/sdks/python"
Repository = "https://github.com/jsondb-cloud/sdk-python"
Issues = "https://github.com/jsondb-cloud/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jsondb_cloud"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100
